src/styles/global.css
:root {
  --gunmetal: #012a36ff;
  --background-color: #29274cff;
  --header-color: #7e52a0ff;
  --bold-color: #d295bfff;
  --text-color: #e6bccdff;
  --old-gold: #d2bf55ff;
  --pumpkin: #fe7f2dff;
  --link-color: #fff9ecff;
}
@font-face {
  font-family: "Mona Sans";
  src: url("/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
    url("/public/fonts/Mona-Sans.woff2") format("woff2-variations");
  font-weight: 200 900;
  font-stretch: 75% 125%;
  font-style: UltraLight Narrow;
}
html {
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: "Mona Sans";
  font-weight: 200;
}

body {
  margin: 0 auto;
  width: 100%;
  max-width: 80ch;
  padding: 1rem;
  line-height: 1.5;
}

* {
  box-sizing: border-box;
}

h1 {
  color: var(--header-color);
  margin: 1rem 0;
  font-size: 2.5rem;
}
h2 {
  color: var(--bold-color);
}

/* nav styles  */
.hamburger {
  padding-right: 20px;
  cursor: pointer;
}

.hamburger .line {
  display: block;
  width: 40px;
  height: 5px;
  margin-bottom: 10px;
  background-color: #ff9776;
}
.nav-links {
  width: 100%;
  top: 5rem;
  left: 48px;
  background: color #ff9776;
  display: none;
  margin: 0;
}

.nav-links a {
  display: block;
  text-align: center;
  padding: 10px 0;
  text-decoration: none;
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}
.nav-links a:hover,
a:focus {
  color: #ff9776;
}

.expanded {
  display: unset;
}
@media screen and (min-width: 636px) {
  .nav-links {
    margin: 5rem;
    display: block;
    position: static;
    width: auto;
    background: none;
  }

  .nav-links a {
    display: inline-block;
    padding: 15px 20px;
  }
  .hamburger {
    display: none;
  }
}

